# ftclp

./: .gitignore  .travis.yml  ANNOTATIONS  Annotations.md  CMakeLists.txt  INSTALL.md  LICENSE  LICENSE.txt  LICENSE_Ciao.txt  LICENSE_MathSAT.txt  Makefile  Makefile.conf  ProjectHome.md  ProvingVerificationConditions.md  README.md  answers.pl  cache.pl  counters.pl  cycles.pl  debug.pl  ftclp.pl  install_ciao  install_gmp  interpolation.pl  op_attributes.pl  options.pl  output.pl  solver.pl  tclp.pl  timer.pl
adt/: Makefile  balanced_tree.pl  mysets.pl  mystrings.pl  union_find.pl
analysis/: discriminants.pl  modes.pl  scc.pl  types.pl
cmake/: FindCIAO.cmake  FindMSAT.cmake
frontend/: builtins.pl  canonical.pl  clauseTermElim.pl  counter_instrument.pl  ftclp_loadprogram.pl  ftclp_package.pl  ftclp_tr.pl  myterms.pl  normalize.pl  ops.pl  readprog.pl  remove_useless_clauses.pl  tclp_loadprogram.pl  tclp_package.pl  tclp_tr.pl  vars.pl  well_formed.pl  writeprog.pl
include/: Ciao.h  config.h.cmake
include/solvers_C/: ciao_smt.h  common.h  msat.h
include/solvers_C/util/: cache.h
include/trie_C/: ciao_trie.h
scripts/: CMakeLists.txt  gen_linker_opts.cc  gen_paths.cc
solver/: CiaoSMT.cpp  CiaoSMT.h  Makefile  ciao_prolog_smt.pl
solver/SMT_solvers/: MSat.cpp  MSat.h  Makefile  Solver.h
solver/SMT_solvers/util/: cache.h
solvers_C/: CMakeLists.txt  ciao_smt.cpp  ciao_smt.pl  msat.cpp
solvers_C/util/: MurmurHash3.cpp
tests/: Makefile  infinite_0.pl  infinite_1.pl  infinite_10.pl  infinite_11.pl  infinite_11a.pl  infinite_12.pl  infinite_13.pl  infinite_1a.pl  infinite_2.pl  infinite_3.pl  infinite_4.pl  infinite_4_unsafe.pl  infinite_5.pl  infinite_6.pl  infinite_6_unsafe.pl  infinite_7.pl  infinite_8.pl  infinite_9.pl  rcsp_1.pl  rcsp_2.pl  rcsp_3.pl  rcsp_4.pl  reach.pl  truckload.pl
trie/: CiaoTrie.cpp  CiaoTrie.h  Makefile  ciao_trie.pl
trie/critbit/: Makefile  critbit.c  test-2.c
trie_C/: CMakeLists.txt  Makefile  README  ciao_trie.cpp  ciao_trie.pl  critbit.c
trunk/: ANNOTATIONS  LICENSE  README
trunk/tests/: infinite_0.pl  infinite_1a.pl  infinite_5.pl  infinite_8.pl  rcsp_1.pl
wiki/: Annotations.wiki  INSTALL.wiki  ProvingVerificationConditions.wiki
